syntax = "proto3";

package project;

option go_package = "github.com/gattyan27/go-next/server/pkg/grpc/project";

import "client.proto";

message Project {
  int64 id = 1;
  string title = 2;
  string description = 3;
  string salary = 4;
  client.Client client = 5;
}

service ProjectService {
  rpc ListProjects(ListProjectsRequest) returns (ListProjectsResponse) {}
  rpc GetProject(GetProjectRequest) returns (GetProjectResponse) {}
  rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse) {}
}

message ListProjectsRequest {
  int32 limit = 1;
}

message ListProjectsResponse {
  repeated Project projects = 1;
}

message GetProjectRequest {
  int64 id = 1;
}

message GetProjectResponse {
  Project project = 1;
}

message CreateProjectRequest {
  Project project = 1;
}

message CreateProjectResponse {
  Project project = 1;
}