syntax = "proto3";

package client;

message Client {
  int64 id = 1;
  string company_name = 2;
  string address = 3;
}
